--- a/uimodule/webapp/view/MainView.view.xml
+++ b/uimodule/webapp/view/MainView.view.xml
@@ -14,7 +14,7 @@
               <Link
                 text="Source Code"
                 target="_blank"
-                href="https://openui5.org/" />
+                href="https://github.com/christopherpielka/UI5DSA3" />
                 <ToolbarSpacer/>
               <Link
                 text="Made with OpenUI5"
