--- a/uimodule/webapp/view/MainView.view.xml
+++ b/uimodule/webapp/view/MainView.view.xml
@@ -16,6 +16,8 @@
                 target="_blank"
                 href="https://github.com/christopherpielka/UI5DSA3" />
                 <ToolbarSpacer/>
+                <Text text="info@christopher-pielka.de"/>
+                <ToolbarSpacer/>
               <Link
                 text="Made with OpenUI5"
                 target="_blank"
